# fishing-dock-api

./: .env.example  .gitignore  .pylintrc  README.md  pyproject.toml
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: 27acc10d3603_feat_additional_blob_table.py  3583da009405_fix_users_correction_image_column_in_.py  62435dd31af0_first_migration.py  66d59931ffb5_additional_topics_and_handlers_tables.py  8cc949aea0d4_feat_additional_blob_table.py  97abdde2da83_fix_change_columns_types.py  c874c1f3a9c1_fix_users_correction_image_column_in_.py  eb2b6a72343f_fix_add_server_default_to_criado_em_.py
src/: main.py  setup.py
src/api/: __init__.py  app.py
src/api/dependencies/: __init__.py  auth.py  connections.py  exception_handlers.py  lifespan.py
src/api/middlewares/: __init__.py
src/database/: models.py
src/database/repositories/: __init__.py  blob.py  posts.py  topics.py  user.py
src/domain/entities/: __init__.py  blob.py  posts.py  topics.py  user.py
src/domain/exceptions/: __init__.py  generic.py
src/domain/interfaces/: __init__.py  blob_storage.py
src/domain/repositories/: __init__.py  blob.py  posts.py  topics.py  user.py
src/domain/services/: __init__.py
src/domain/users/: __init__.py
src/integrations/blob_storage/: __init__.py  adapters.py  exceptions.py  factory.py  interfaces.py  schemas.py
src/utils/: __init__.py  converters.py  security.py  validators.py
tests/: conftest.py
tests/unit/application/: conftest.py  test_login.py  test_register.py
tests/unit/dependencies/: __init__.py  test_auth.py
(+59 files in other folders)
